--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "pg": "^7.11.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "start:middleware": "node indexUsingMiddleware.js"
   }
 }
